--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Doug Crew
 */
 
 public with sharing class FlowControlLoopsCollections {
@@ -29,7 +29,11 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
-        return null; // Replace null with the variable you used to store the result
+        if( x > y) {
+            return 'Hello World!';
+        } else {
+            return null;
+        }
     }
 
     /**
@@ -42,7 +46,11 @@ public with sharing class FlowControlLoopsCollections {
      * @return true if the person is eligible to vote, false otherwise.
      */
     public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+        if( age >= 18 ) {
+            return true;
+        } else {
+        return false;
+        }// Replace null with the variable you used to store the result
     }
 
     /**
@@ -57,8 +65,13 @@ public with sharing class FlowControlLoopsCollections {
     public static Integer findMax(Integer num1, Integer num2) {
         // Initialize largestNum as null
         Integer largestNum = null;
+        if(num1 == null || num2 == null ){
+            return null;
+        } else if( num1 >= num2 ) {
+            return num1;
+        } else { return num2;}
 
-        return null; // Replace null with the variable you used to store the result
+         // Replace null with the variable you used to store the result
     }
 
 
@@ -71,7 +84,14 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+            return null;
+        } else if ( a > 0){
+            return 'Positive';
+        } else if ( a < 0){
+            return 'Negative';
+        }
+        return 'Zero'; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -83,7 +103,12 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
     public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if(a == null){
+        return null; 
+    } else if (Math.mod(a, 2) == 0) {
+        return 'Even';  // Replace null with the variable you used to store the result
+    } else { return 'Odd';
+    }
     }
 
     /**
@@ -94,7 +119,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
+        if ( a == null ) {
+            return 'Null';
+        } else if ( String.isEmpty(a) ) {
+            return 'Empty';
+        } else {
+        return 'Contains Text'; 
+        }
     }
 
     /**
@@ -110,7 +141,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
+       if ( score >= 90){
+        return 'A';
+       } else if ( score >= 80){
+        return 'B';
+       } else if (score >=70){
+        return 'C';
+       } else if (score >= 60){
+        return 'D';
+       } else {
+        return 'F'; 
+       }// Replace null with the variable you used to store the result
     }
 
 
@@ -122,13 +163,12 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        
+        Integer sum = 0;
+        for (Integer i = 0; i <= intLimit; i++){
+        sum += i;
+                     
+         } return sum;  // Replace null with the variable you used to store the result
     }
 
     /**
@@ -139,15 +179,14 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String returnHelloWorld() {
         // Initialize the result String
-
+        String hello = 'Hello World!; ';
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
+        
+        String[] helloList = new String[0];
+        for (Integer i = 0; i < 3; i++) { 
+           helloList.add(hello);
             
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+           } return String.join(helloList, '');
     }
 
     /**
@@ -162,17 +201,17 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String repeatString(String inputString, Integer repeatCount) {
         // Initialize the result String
-
-        // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
+            String [] result = new String[0];
+        // Use a for loop to append the inputString to the result string repeatCount times        
+        for (Integer i = 0; i < repeatCount; i++) {
+            if(i != repeatCount -1) {
+                result.add(inputString + '; ');
             // If it is not the last iteration, add a semicolon to separate the strings
-        }
-        */
-
-        // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+            } else {
+                result.add(inputString);
+            }
+        } return String.join(result, '');
+ // Return the final result string
     }
 
     /**
@@ -183,14 +222,13 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static List<Integer> createAndPopulateList() {
         // Create a new list of integers
-
-        // Add the integers 1, 2, and 3 to the list
-        // add 1
-        // add 2
-        // add 3
-
-        // Return the populated list
-        return null; // Replace null with the variable you used to store the result
+        List<Integer> ints = new List<Integer>();
+        Integer j = 0;
+        for ( Integer i = 0; i < 3; i++){
+            Integer count = j += 1;
+           ints.add(count);
+        }       
+        return ints; 
     }
 
     /**
@@ -202,11 +240,11 @@ public with sharing class FlowControlLoopsCollections {
     public static List<Integer> createAndRemoveFromList() {
         // Create a new list of integers and add numbers 1 to 5
         List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
-
+            numberList.remove(2);
         // Remove the 3rd element (number 3) from the list
         
         // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -219,13 +257,13 @@ public with sharing class FlowControlLoopsCollections {
     public static List<Integer> createIntegerList(Integer n) {
         // Create a new list of integers 
 
-        /*
-        for() {
-            //add integer to the list
-        }
-        */ 
-
-        return null; // Replace null with the variable you used to store the result
+        List<Integer> ints = new List<Integer>();
+        Integer j = 0;
+        for ( Integer i = 0; i < n; i++){
+            Integer count = j += 1;
+           ints.add(count);
+        }       
+        return ints; 
     }
 
     /**
@@ -239,10 +277,10 @@ public with sharing class FlowControlLoopsCollections {
     public static Set<String> createStringSet(List<String> inputList) {
         // Create a new Set of strings
         Set<String> stringSet = new Set<String>();
-
+            stringSet.addAll(inputList);
         //add strings to the set
 
-        return null; // Replace null with the variable you used to store the result
+        return stringSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -252,14 +290,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of positive integers from the list.
      */
     public static Integer sumPositiveIntegers() {
+        Integer sum = 0;
         List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
-
+            for ( Integer i = 0; i < numbers.size(); i++) {
+                if( numbers[i] > 0) {
+                    sum += numbers[i];
+                } 
+            } return sum;
         // Loop through the list of integers
             // if the number is negative skip this iteration
-        
-
-        return null; // Replace null with the variable you used to store the result
-    }
+        } // Replace null with the variable you used to store the result
 
     /**
      * Question 16
@@ -271,11 +311,16 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer findWordInList(String wordToFind, List<String> words) {
         // The variable to store the index of the word
-
+        Integer wordIndex = -1;
         // Loop through the list of words
-            // If the current word is the word to find, exit the loop
-
-        return null; // Replace null with the variable you used to store the result
+       for ( Integer i = 0; i < words.size(); i++){
+        if( words[i] == wordToFind) {
+            wordIndex = i;
+            break;
+        }
+       }
+        return Integer.valueOf(wordIndex);
+            // If the current word is the word to find, exit the loop // Replace null with the variable you used to store the result
     }
 
     /**
@@ -287,10 +332,16 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Decimal countMoney() {
         // The list of money in the wallet, represented in dollars and cents
-        List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; //DO NOT CHANGE
-
-        return null; // Replace null with the variable you used to store the result
+        List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; 
+         Decimal total = 0.00;//DO NOT CHANGE
+            for( Integer i = 0; i < moneyInWallet.size(); i++){
+                total += moneyInWallet[i];
+                if(total >= 40.00){
+                    break;
+                }              
+            } return total;
     }
+        
 
     /**
      * Question 18
@@ -300,7 +351,13 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Map<String, Integer> addItemsToMap() {
         // Initialize an empty Map
+        Map<String, Integer> fruit = new Map<String, Integer>(); 
 
+        fruit.put('Apples', 5);
+        fruit.put('Oranges', 10);
+        fruit.put('Bananas', 15);
+        fruit.put('Pears', 20);
+        fruit.put('Grapes', 25);    
         // Add key-value pairs to the Map
         // add Apples => 5
         // add Oranges => 10
@@ -308,7 +365,7 @@ public with sharing class FlowControlLoopsCollections {
         // add Pears => 20
         // add Grapes => 25
 
-        return null; // Replace null with the variable you used to store the result
+        return fruit; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -322,17 +379,21 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer getSalary(String employeeName) {
         // Initialize a Map
-
-        // Add key-value pairs to the Map
-        // add John Doe => 50000
-        // add Jane Smith => 60000
-        // add Sam Brown => 55000
-        // add Alice Johnson => 65000
-
-        // Get the salary of the employee
-
+        Map<String, Integer> empSalaries = new Map<String, Integer>();
+        empSalaries.put('John Doe', 50000);
+        empSalaries.put('Jane Smith', 60000);
+        empSalaries.put('Sam Brown', 55000);
+        empSalaries.put('Alice Johnson', 65000);
+        // Get the salary of the employee22
+       
+        if (empSalaries.containsKey(employeeName)) {
+        Integer salary = empSalaries.get(employeeName);
+        return salary; 
+        } else {
+            return null;
+        }
         // Return the salary of the employee, or null if the employee is not found in the Map
-        return null; // Replace null with the variable you used to store the result
+         // Replace null with the variable you used to store the result
     }
 
     /**
@@ -349,6 +410,11 @@ public with sharing class FlowControlLoopsCollections {
         // Initialize a Map
         Map<String, Integer> employeeSalaries = new Map<String, Integer>();
 
+        employeeSalaries.put('John Doe', 50000);
+        employeeSalaries.put('Jane Smith', 60000);
+        employeeSalaries.put('Sam Brown', 55000);
+        employeeSalaries.put('Alice Johnson', 65000);
+
         // Add key-value pairs to the Map
         // add John Doe => 50000
         // add Jane Smith => 60000
@@ -356,13 +422,17 @@ public with sharing class FlowControlLoopsCollections {
         // add Alice Johnson => 65000
 
         // Initialize a list to store the names of high paid employees
-
+        List<String> topPaid = new List<String>();    
         // Iterate over the Map using a for loop
-            // Check if the salary of the employee is more than 55000
-                // Add the employee to the list of high paid employees
+        for (String empName : employeeSalaries.keySet()){
+            if( employeeSalaries.get(empName) > 55000){
+                topPaid.add(empName);
+            } // Check if the salary of the employee is more than 55000
 
-        // Return the list of high paid employees
-        return null; // Replace null with the variable you used to store the result
+         } return topPaid;
+                // Add the employee to the list of high paid employees
+            // Return the list of high paid employees
+            // Replace null with the variable you used to store the result
     }
 
 }
